--- a/audio.html
+++ b/audio.html
@@ -83,7 +83,7 @@
             <a href="iframe.html">Bangla  translation</a>
         </nav>
     </header>
-    <h2>Surah Al Kahf (Be Heaven) سورة الكهف By Omar Hisham Al Arabi
+    <h2>Reciter: Abdel Aziz Al Ahmed || Surah: 018 Al-Kahf
     </h2>
     
    <audio controls>
