--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     <a type="ref" href="https://sunnah.com/mishkat:2175" target="_blank"> <strong>Reference	 : Mishkat al-Masabih 2175</strong></a>
 
     <h2>Surah Al Kahf - 1st 10 verses</h2>
-    <img src="https://i.pinimg.com/564x/5e/54/6e/5e546e450e58c45d9a76fb46b281a2b0.jpg" alt="Surah Al-Kahf First 10 Verses">
+    <img src="surahkahf10.jpg" alt="Surah Al-Kahf First 10 Verses">
 
-
+<br><br> <br>
     <footer align="center">&copy;<a href="https://github.com/mahircce"> <strong>T H MAHIR</strong></a></footer>
 </body>
 </html>
