--- a/iframe.html
+++ b/iframe.html
@@ -21,7 +21,7 @@
         }
         nav a {
             color: white;
-            text-decoration: none;
+            text-decoration: underline;
             margin: 0 15px;
             font-size: 18px;
         }
@@ -89,11 +89,11 @@
         </nav>
     </header>
     <h2>Surah Kahf Recited by Ismail Al Nouri ┇ An Nafee ┇Bangla  translation</h2>
-    <iframe width="560" height="315" 
+    <iframe width="360" height="180" 
     src="https://www.youtube.com/embed/5R06LRdUCSE?si=GdNAfMjnF_poC72w" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
+<br><br><br>
     <footer align="center">&copy;<a href="https://github.com/mahircce"> <strong>T H MAHIR</strong></a></footer>
 </body>
 </html>
