--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         nav a {
             color: white;
-            text-decoration: none;
+            text-decoration: underline;
             margin: 0 15px;
             font-size: 18px;
         }
@@ -81,7 +81,7 @@
     <a type="ref" href="https://sunnah.com/mishkat:2175" target="_blank"> <strong>Reference	 : Mishkat al-Masabih 2175</strong></a>
 
     <h2>Surah Al Kahf - 1st 10 verses</h2>
-    <img src="surahkahf10.jpg" alt="Surah Al-Kahf First 10 Verses">
+    <img src="surahkahf10.jpg" alt="Surah Al-Kahf First 10 Verses" height="540" width="360">
 
 <br><br> <br>
     <footer align="center">&copy;<a href="https://github.com/mahircce"> <strong>T H MAHIR</strong></a></footer>
