--- a/video.html
+++ b/video.html
@@ -21,7 +21,7 @@
         }
         nav a {
             color: white;
-            text-decoration: none;
+            text-decoration: underline;
             margin: 0 15px;
             font-size: 18px;
         }
@@ -75,10 +75,10 @@
             <a href="iframe.html">Bangla  translation</a>
         </nav>
     </header>
-    <h2>Surah Al-Kahf Full | (the Cave)سورة الكهف - By Abdur Rehman Al Ossi </h2>
+    <h2>Surah Al-Kahf | YT-Qur'an Recitation </h2>
    <video width="360" height="180" controls>
     <source
-src="Surah Al-Kahf Full _ (the Cave)سورة الكهف - By Abdur Rehman Al Ossi _ Beautiful Recitation.mp4"
+src="Surah Kahf Fast Recitation (No Ads).mp4"
  type="video/mp4"
  />
  Your browser does not support the video tag.
