--- a/audio.html
+++ b/audio.html
@@ -21,7 +21,7 @@
         }
         nav a {
             color: white;
-            text-decoration: none;
+            text-decoration:underline;
             margin: 0 15px;
             font-size: 18px;
         }
@@ -91,7 +91,7 @@
     Your browser does not support the audio element. 
    </audio>
 
-
+<br><br><br><br><br>
     <footer align="center">&copy;<a href="https://github.com/mahircce"> <strong>T H MAHIR</strong></a></footer>
 </body>
 </html>
